--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<canvas id="gc" class="game-canvas" width="500" height="500"></canvas>
 	</div>
 	<div class="keys">
-	  <a class="arr up" onclick="Snake.action('up')">
+	  <a class="arr up" onclick="Snake.action('esc')">
 	    <b class="chevron1">esc</b></a>
 	  <a class="up arr" onclick="Snake.action('up')">
 	    <i class="chevron up"></i></a>
-	  <a class="arr up" onclick="Snake.action('up')">
+	  <a class="arr up" onclick="Snake.action('entr')">
 	    <b class="chevron1">entr</b></a>   
 	  <br />
 	  <a class="left arr" onclick="Snake.action('left')">
